# ampivalence

./: .gitmodules  README.md
app/: .gitignore  Cargo.toml  deploy.sh
app/.cargo/: config
app/test_kmscube/: Cargo.toml
app/test_kmscube/src/: drm.rs  egl.rs  main.rs
app/test_kmscube/src/kms/: device.rs  framebuffer.rs  mod.rs
system/: deploy.sh
system/etc/local.d/: fuckup-udev-database.start
system/home/alfred/: .profile
system/home/alfred/.config/sway/: config
system/home/root/: .profile
