[package]
name = "test_kmscube"
version = "0.1.0"
edition = "2021"

[dependencies]

#drm = { version = "0.6" }
drm = { git = "https://github.com/TheEdward162/drm-rs.git" }
gbm = { version = "0.8", features = ["drm-support"] }

khronos-egl = { version = "4.1", features = ["dynamic"] }

gl = "0.14"

anyhow = "1"
log = "0.4"
edwardium_logger = { version = "1.2.1", default-features = false, features = ["std", "colored_stderr_output"] }
